# hts_engine_API

./: .gitignore  Makefile.in  Makefile.mak  configure  configure.ac  setup.sh  setup_windows.bat
include/: HTS_engine.h
lib/: HTS_engine.c  HTS_gstream.c  HTS_hidden.h  HTS_misc.c  Makefile.am  Makefile.in  Makefile.mak  WORLD_vocoder.c
